--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ table tr td:last-child  {
    border-right: 0;
 }
 .endgame {
-  /* display: none; */
+display: none;
 width: 300px;
 top: 170px;
 background-color: rgba(205, 133, 63, 0.8);
